[gd_scene load_steps=3 format=3 uid="uid://ts4mrst1vuu3"]

[ext_resource type="Script" path="res://user_interface/menu/upgrade_menu/upgrade_menu.gd" id="1_pxj7d"]
[ext_resource type="PackedScene" uid="uid://dxe27w7ldugch" path="res://user_interface/menu/upgrade_menu/upgrade_slot_detail.tscn" id="2_pbjye"]

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pxj7d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 1092.0
offset_bottom = 578.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 24
text = "Upgrade"

[node name="CurrentCoinLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Current Coin : 1000 "

[node name="CloseUpgradeMenuButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SlotGridAndDetail" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/SlotGridAndDetail"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SlotGridAndDetail/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="SlotGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/SlotGridAndDetail/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
columns = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/SlotGridAndDetail"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="SlotDetail" parent="MarginContainer/VBoxContainer/SlotGridAndDetail" instance=ExtResource("2_pbjye")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/CloseUpgradeMenuButton" to="." method="onCloseUpgradeMenuButtonPressed"]
